creacion de las paginas html restantes y adaptacion al primer css

--- a/css/CSS.css
+++ b/css/CSS.css
@@ -51,7 +51,7 @@ div {
 }
 
 #caja5 {
-    border: 2px coral dotted;
+    border: 2px;
     margin: 0;
     border-color: darkolivegreen;
     float: left;
