--- a/css/CSS2.css
+++ b/css/CSS2.css
@@ -15,11 +15,11 @@ div {
 }
 
 #caja1 {
-    background-color:darksalmon;
+    background-color:lightblue;
     border-radius: 98px 98px 98px 98px;
     -moz-border-radius: 98px 98px 98px 98px;
     -webkit-border-radius: 98px 98px 98px 98px;
-    border: 5px double #001eff;
+    border: 5px double darkmagenta;
 }
 
 #caja2 {
@@ -31,7 +31,7 @@ div {
     border-radius: 98px 98px 98px 98px;
     -moz-border-radius: 98px 98px 98px 98px;
     -webkit-border-radius: 98px 98px 98px 98px;
-    border: 9px double #001eff;
+    border: 9px double darkmagenta;
     
 }
 
